welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: not found: value nums
  var n  = nums.length
           ^island:4: error: not found: value nums
  var haut=nums(0)
           ^island:6: error: not found: value nums
    if (nums(k)>haut){
        ^